possible bug-fix in pom.xml